cmake_minimum_required(VERSION 2.4.6)
cmake_policy(SET CMP0005 OLD)

project( "ja2-stracciatella")

option(DEBUG "Debug build?" OFF)
option(JA2EDITOR "Build Editor?" OFF)

#build type
IF(DEBUG)
  set( CMAKE_BUILD_TYPE Debug)
  add_definitions( -D_DEBUG)
  add_definitions( -DSGP_DEBUG)
ENDIF(DEBUG)

#language defines uncomment exactly one
add_definitions(
#  -DGERMAN
#  -DDUTCH
   -DENGLISH
#  -DFRENCH
#  -DITALIAN
#  -DPOLISH
# Russian BUKA Agonia Vlasti release
#  -DRUSSIAN
# Russian Gold release
#  -DRUSSIAN_GOLD
)

#code defines
add_definitions( -DJA2 -DSGPDATADIR=\"/usr/local/share/ja2\")

#c-compiler flags
set( CMAKE_C_FLAGS ${CMAKE_C_FLAGS}
  "-std=gnu99"
)

#cxx-compiler flags
#set( CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS}
#)

find_Package(SDL REQUIRED)
IF(MINGW)
  set( SDL_INCLUDE_DIR "C:\\msys\\1.0\\local\\include\\SDL")
  set( SDL_LIBRARY ${SDL_LIBRARY} SDLmain)
ENDIF(MINGW)

include_directories(${CMAKE_SOURCE_DIR}/Build)
include_directories(${CMAKE_SOURCE_DIR}/Build/Tactical)
include_directories(${CMAKE_SOURCE_DIR}/Build/Strategic)
include_directories(${CMAKE_SOURCE_DIR}/Build/Editor)
include_directories(${CMAKE_SOURCE_DIR}/Build/Res)
include_directories(${CMAKE_SOURCE_DIR}/Build/Laptop)
include_directories(${CMAKE_SOURCE_DIR}/Build/Utils)
include_directories(${CMAKE_SOURCE_DIR}/Build/TileEngine)
include_directories(${CMAKE_SOURCE_DIR}/Build/TacticalAI)
include_directories(${CMAKE_SOURCE_DIR}/sgp)
include_directories(${SDL_INCLUDE_DIR})

set( JA2SRCS
	Build/Local.cc
	Build/AniViewScreen.cc
	Build/Credits.cc
	Build/Fade_Screen.cc
	Build/GameInitOptionsScreen.cc
	Build/GameLoop.cc
	Build/GameScreen.cc
	Build/GameSettings.cc
	Build/GameVersion.cc
	Build/HelpScreen.cc
	Build/Init.cc
	Build/Intro.cc
	Build/JA2_Splash.cc
	Build/JAScreens.cc
	Build/Laptop/AIM.cc
	Build/Laptop/AIMArchives.cc
	Build/Laptop/AIMFacialIndex.cc
	Build/Laptop/AIMHistory.cc
	Build/Laptop/AIMLinks.cc
	Build/Laptop/AIMMembers.cc
	Build/Laptop/AIMPolicies.cc
	Build/Laptop/AIMSort.cc
	Build/Laptop/BobbyR.cc
	Build/Laptop/BobbyRAmmo.cc
	Build/Laptop/BobbyRArmour.cc
	Build/Laptop/BobbyRGuns.cc
	Build/Laptop/BobbyRMailOrder.cc
	Build/Laptop/BobbyRMisc.cc
	Build/Laptop/BobbyRShipments.cc
	Build/Laptop/BobbyRUsed.cc
	Build/Laptop/BrokenLink.cc
	Build/Laptop/CharProfile.cc
	Build/Laptop/EMail.cc
	Build/Laptop/Files.cc
	Build/Laptop/Finances.cc
	Build/Laptop/Florist.cc
	Build/Laptop/Florist_Cards.cc
	Build/Laptop/Florist_Gallery.cc
	Build/Laptop/Florist_Order_Form.cc
	Build/Laptop/Funeral.cc
	Build/Laptop/History.cc
	Build/Laptop/IMPVideoObjects.cc
	Build/Laptop/IMP_AboutUs.cc
	Build/Laptop/IMP_Attribute_Entrance.cc
	Build/Laptop/IMP_Attribute_Finish.cc
	Build/Laptop/IMP_Attribute_Selection.cc
	Build/Laptop/IMP_Begin_Screen.cc
	Build/Laptop/IMP_Compile_Character.cc
	Build/Laptop/IMP_Confirm.cc
	Build/Laptop/IMP_Finish.cc
	Build/Laptop/IMP_HomePage.cc
	Build/Laptop/IMP_MainPage.cc
	Build/Laptop/IMP_Personality_Entrance.cc
	Build/Laptop/IMP_Personality_Finish.cc
	Build/Laptop/IMP_Personality_Quiz.cc
	Build/Laptop/IMP_Portraits.cc
	Build/Laptop/IMP_Text_System.cc
	Build/Laptop/IMP_Voices.cc
	Build/Laptop/Insurance.cc
	Build/Laptop/Insurance_Comments.cc
	Build/Laptop/Insurance_Contract.cc
	Build/Laptop/Insurance_Info.cc
	Build/Laptop/Laptop.cc
	Build/Laptop/Mercs.cc
	Build/Laptop/Mercs_Account.cc
	Build/Laptop/Mercs_Files.cc
	Build/Laptop/Mercs_No_Account.cc
	Build/Laptop/Personnel.cc
	Build/Laptop/Store_Inventory.cc
	Build/LoadSaveEMail.cc
	Build/LoadSaveTacticalStatusType.cc
	Build/Loading_Screen.cc
	Build/MainMenuScreen.cc
	Build/MercPortrait.cc
	Build/MessageBoxScreen.cc
	Build/Options_Screen.cc
	Build/SaveLoadGame.cc
	Build/SaveLoadScreen.cc
	Build/Screens.cc
	Build/Strategic/AI_Viewer.cc
	Build/Strategic/Assignments.cc
	Build/Strategic/Auto_Resolve.cc
	Build/Strategic/Campaign_Init.cc
	Build/Strategic/Creature_Spreading.cc
	Build/Strategic/Game_Clock.cc
	Build/Strategic/Game_Event_Hook.cc
	Build/Strategic/Game_Events.cc
	Build/Strategic/Game_Init.cc
	Build/Strategic/Hourly_Update.cc
	Build/Strategic/LoadSaveSectorInfo.cc
	Build/Strategic/LoadSaveStrategicMapElement.cc
	Build/Strategic/LoadSaveUndergroundSectorInfo.cc
	Build/Strategic/MapScreen.cc
	Build/Strategic/Map_Screen_Helicopter.cc
	Build/Strategic/Map_Screen_Interface.cc
	Build/Strategic/Map_Screen_Interface_Border.cc
	Build/Strategic/Map_Screen_Interface_Bottom.cc
	Build/Strategic/Map_Screen_Interface_Map.cc
	Build/Strategic/Map_Screen_Interface_Map_Inventory.cc
	Build/Strategic/Map_Screen_Interface_TownMine_Info.cc
	Build/Strategic/Meanwhile.cc
	Build/Strategic/Merc_Contract.cc
	Build/Strategic/Player_Command.cc
	Build/Strategic/PreBattle_Interface.cc
	Build/Strategic/Queen_Command.cc
	Build/Strategic/QuestText.cc
	Build/Strategic/Quest_Debug_System.cc
	Build/Strategic/Quests.cc
	Build/Strategic/Scheduling.cc
	Build/Strategic/Strategic.cc
	Build/Strategic/StrategicMap.cc
	Build/Strategic/Strategic_AI.cc
	Build/Strategic/Strategic_Event_Handler.cc
	Build/Strategic/Strategic_Merc_Handler.cc
	Build/Strategic/Strategic_Mines.cc
	Build/Strategic/Strategic_Movement.cc
	Build/Strategic/Strategic_Movement_Costs.cc
	Build/Strategic/Strategic_Pathing.cc
	Build/Strategic/Strategic_Status.cc
	Build/Strategic/Strategic_Town_Loyalty.cc
	Build/Strategic/Strategic_Turns.cc
	Build/Strategic/Town_Militia.cc
	Build/Sys_Globals.cc
	Build/Tactical/Air_Raid.cc
	Build/Tactical/Animation_Cache.cc
	Build/Tactical/Animation_Control.cc
	Build/Tactical/Animation_Data.cc
	Build/Tactical/ArmsDealerInvInit.cc
	Build/Tactical/Arms_Dealer_Init.cc
	Build/Tactical/Auto_Bandage.cc
	Build/Tactical/Boxing.cc
	Build/Tactical/Bullets.cc
	Build/Tactical/Campaign.cc
	Build/Tactical/Civ_Quotes.cc
	Build/Tactical/Dialogue_Control.cc
	Build/Tactical/DisplayCover.cc
	Build/Tactical/Drugs_And_Alcohol.cc
	Build/Tactical/End_Game.cc
	Build/Tactical/Enemy_Soldier_Save.cc
	Build/Tactical/FOV.cc
	Build/Tactical/Faces.cc
	Build/Tactical/Gap.cc
	Build/Tactical/Handle_Doors.cc
	Build/Tactical/Handle_Items.cc
	Build/Tactical/Handle_UI.cc
	Build/Tactical/Interface.cc
	Build/Tactical/Interface_Control.cc
	Build/Tactical/Interface_Cursors.cc
	Build/Tactical/Interface_Dialogue.cc
	Build/Tactical/Interface_Items.cc
	Build/Tactical/Interface_Panels.cc
	Build/Tactical/Interface_Utils.cc
	Build/Tactical/Inventory_Choosing.cc
	Build/Tactical/Items.cc
	Build/Tactical/Keys.cc
	Build/Tactical/LOS.cc
	Build/Tactical/LoadSaveBasicSoldierCreateStruct.cc
	Build/Tactical/LoadSaveBullet.cc
	Build/Tactical/LoadSaveMercProfile.cc
	Build/Tactical/LoadSaveObjectType.cc
	Build/Tactical/LoadSaveRottingCorpse.cc
	Build/Tactical/LoadSaveSoldierCreate.cc
	Build/Tactical/LoadSaveSoldierType.cc
	Build/Tactical/LoadSaveVehicleType.cc
	Build/Tactical/Map_Information.cc
	Build/Tactical/Merc_Entering.cc
	Build/Tactical/Merc_Hiring.cc
	Build/Tactical/Militia_Control.cc
	Build/Tactical/Morale.cc
	Build/Tactical/OppList.cc
	Build/Tactical/Overhead.cc
	Build/Tactical/PathAI.cc
	Build/Tactical/Points.cc
	Build/Tactical/QArray.cc
	Build/Tactical/Real_Time_Input.cc
	Build/Tactical/Rotting_Corpses.cc
	Build/Tactical/ShopKeeper_Interface.cc
	Build/Tactical/SkillCheck.cc
	Build/Tactical/Soldier_Add.cc
	Build/Tactical/Soldier_Ani.cc
	Build/Tactical/Soldier_Control.cc
	Build/Tactical/Soldier_Create.cc
	Build/Tactical/Soldier_Find.cc
	Build/Tactical/Soldier_Init_List.cc
	Build/Tactical/Soldier_Profile.cc
	Build/Tactical/Soldier_Tile.cc
	Build/Tactical/Spread_Burst.cc
	Build/Tactical/Squads.cc
	Build/Tactical/Strategic_Exit_GUI.cc
	Build/Tactical/Structure_Wrap.cc
	Build/Tactical/Tactical_Save.cc
	Build/Tactical/Tactical_Turns.cc
	Build/Tactical/TeamTurns.cc
	Build/Tactical/Turn_Based_Input.cc
	Build/Tactical/UI_Cursors.cc
	Build/Tactical/Vehicles.cc
	Build/Tactical/Weapons.cc
	Build/Tactical/World_Items.cc
	Build/TacticalAI/AIList.cc
	Build/TacticalAI/AIMain.cc
	Build/TacticalAI/AIUtils.cc
	Build/TacticalAI/Attacks.cc
	Build/TacticalAI/CreatureDecideAction.cc
	Build/TacticalAI/DecideAction.cc
	Build/TacticalAI/FindLocations.cc
	Build/TacticalAI/Knowledge.cc
	Build/TacticalAI/Medical.cc
	Build/TacticalAI/Movement.cc
	Build/TacticalAI/NPC.cc
	Build/TacticalAI/PanicButtons.cc
	Build/TacticalAI/Realtime.cc
	Build/TileEngine/Ambient_Control.cc
	Build/TileEngine/Buildings.cc
	Build/TileEngine/Environment.cc
	Build/TileEngine/Exit_Grids.cc
	Build/TileEngine/Explosion_Control.cc
	Build/TileEngine/Fog_Of_War.cc
	Build/TileEngine/Interactive_Tiles.cc
	Build/TileEngine/Isometric_Utils.cc
	Build/TileEngine/LightEffects.cc
	Build/TileEngine/Lighting.cc
	Build/TileEngine/LoadSaveExplosionType.cc
	Build/TileEngine/LoadSaveLightEffect.cc
	Build/TileEngine/LoadSaveLightSprite.cc
	Build/TileEngine/LoadSaveRealObject.cc
	Build/TileEngine/LoadSaveSmokeEffect.cc
	Build/TileEngine/Map_Edgepoints.cc
	Build/TileEngine/Overhead_Map.cc
	Build/TileEngine/Phys_Math.cc
	Build/TileEngine/Physics.cc
	Build/TileEngine/Pits.cc
	Build/TileEngine/Radar_Screen.cc
	Build/TileEngine/RenderWorld.cc
	Build/TileEngine/Render_Dirty.cc
	Build/TileEngine/Render_Fun.cc
	Build/TileEngine/SaveLoadMap.cc
	Build/TileEngine/Simple_Render_Utils.cc
	Build/TileEngine/Smell.cc
	Build/TileEngine/SmokeEffects.cc
	Build/TileEngine/Structure.cc
	Build/TileEngine/SysUtil.cc
	Build/TileEngine/Tactical_Placement_GUI.cc
	Build/TileEngine/TileDat.cc
	Build/TileEngine/TileDef.cc
	Build/TileEngine/Tile_Animation.cc
	Build/TileEngine/Tile_Cache.cc
	Build/TileEngine/Tile_Surface.cc
	Build/TileEngine/WorldDat.cc
	Build/TileEngine/WorldDef.cc
	Build/TileEngine/WorldMan.cc
	Build/Utils/Animated_ProgressBar.cc
	Build/Utils/Cinematics.cc
	Build/Utils/Cursors.cc
	Build/Utils/Debug_Control.cc
	Build/Utils/Encrypted_File.cc
	Build/Utils/Event_Manager.cc
	Build/Utils/Event_Pump.cc
	Build/Utils/Font_Control.cc
	Build/Utils/MapUtility.cc
	Build/Utils/MercTextBox.cc
	Build/Utils/Message.cc
	Build/Utils/Multi_Language_Graphic_Utils.cc
	Build/Utils/Music_Control.cc
	Build/Utils/PopUpBox.cc
	Build/Utils/Quantize.cc
	Build/Utils/STIConvert.cc
	Build/Utils/Slider.cc
	Build/Utils/Sound_Control.cc
	Build/Utils/Text.cc
	Build/Utils/Text_Input.cc
	Build/Utils/Text_Utils.cc
	Build/Utils/Timer_Control.cc
	Build/Utils/Utilities.cc
	Build/Utils/WordWrap.cc
	sgp/Button_Sound_Control.cc
	sgp/Button_System.cc
	sgp/Config.cc
	sgp/Container.cc
	sgp/Cursor_Control.cc
	sgp/Debug.cc
	sgp/FileMan.cc
	sgp/Font.cc
	sgp/HImage.cc
	sgp/ImpTGA.cc
	sgp/Input.cc
	sgp/LibraryDataBase.cc
	sgp/Line.cc
	sgp/MemMan.cc
	sgp/MouseSystem.cc
	sgp/PCX.cc
	sgp/Random.cc
	sgp/SGP.cc
	sgp/SGPStrings.cc
	sgp/STCI.cc
	sgp/Shading.cc
	sgp/Smack_Stub.cc
	sgp/SoundMan.cc
	sgp/TranslationTable.c
	sgp/VObject.cc
	sgp/VObject_Blitters.cc
	sgp/VSurface.cc
	sgp/Video.cc
)

set( JA2LNGS
	Build/Utils/_DutchText.cc
	Build/Utils/_EnglishText.cc
	Build/Utils/_FrenchText.cc
	Build/Utils/_GermanText.cc
	Build/Utils/_ItalianText.cc
	Build/Utils/_JA25EnglishText.cc
	Build/Utils/_JA25GermanText.cc
	Build/Utils/_JA25RussianText.cc
	Build/Utils/_PolishText.cc
	Build/Utils/_RussianText.cc
)

set( JA2HDRS
	sgp/Types.h
	sgp/Input.h
	sgp/Timer.h
	sgp/Smack_Stub.h
	sgp/LibraryDataBase.h
	sgp/Shading.h
	sgp/VObject_Blitters.h
	sgp/AutoPtr.h
	sgp/Buffer.h
	sgp/SGPStrings.h
	sgp/VObject.h
	sgp/VSurface.h
	sgp/ImgFmt.h
	sgp/Smack.h
	sgp/WCheck.h
	sgp/SGP.h
	sgp/AutoObj.h
	sgp/English.h
	sgp/Random.h
	sgp/PODObj.h
	sgp/LoadSaveData.h
	sgp/Font.h
	sgp/TranslationTable.h
	sgp/Button_Sound_Control.h
	sgp/Container.h
	sgp/MouseSystem.h
	sgp/Line.h
	sgp/PCX.h
	sgp/ImpTGA.h
	sgp/HImage.h
	sgp/STCI.h
	sgp/FileMan.h
	sgp/Button_System.h
	sgp/Video.h
	sgp/TopicIDs.h
	sgp/Config.h
	sgp/SoundMan.h
	sgp/MemMan.h
	sgp/Rad.h
	sgp/Debug.h
	sgp/Cursor_Control.h
	sgp/Vector.h
	Build/LoadSaveEMail.h
	Build/Directories.h
	Build/MercPortrait.h
	Build/MainMenuScreen.h
	Build/ScreenIDs.h
	Build/GameVersion.h
	Build/TileEngine/Fog_Of_War.h
	Build/TileEngine/SysUtil.h
	Build/TileEngine/LightEffects.h
	Build/TileEngine/RenderWorld.h
	Build/TileEngine/LoadSaveSmokeEffect.h
	Build/TileEngine/Buildings.h
	Build/TileEngine/LoadSaveLightEffect.h
	Build/TileEngine/LoadSaveRealObject.h
	Build/TileEngine/Overhead_Map.h
	Build/TileEngine/Tile_Surface.h
	Build/TileEngine/Exit_Grids.h
	Build/TileEngine/SaveLoadMap.h
	Build/TileEngine/LoadSaveLightSprite.h
	Build/TileEngine/Radar_Screen.h
	Build/TileEngine/LoadSaveExplosionType.h
	Build/TileEngine/Environment.h
	Build/TileEngine/Interactive_Tiles.h
	Build/TileEngine/SmokeEffects.h
	Build/TileEngine/Lighting.h
	Build/TileEngine/Tactical_Placement_GUI.h
	Build/TileEngine/WorldMan.h
	Build/TileEngine/Structure_Internals.h
	Build/TileEngine/Render_Fun.h
	Build/TileEngine/Physics.h
	Build/TileEngine/Render_Dirty.h
	Build/TileEngine/Phys_Math.h
	Build/TileEngine/Isometric_Utils.h
	Build/TileEngine/Tile_Cache.h
	Build/TileEngine/WorldDef.h
	Build/TileEngine/Pits.h
	Build/TileEngine/Ambient_Types.h
	Build/TileEngine/Ambient_Control.h
	Build/TileEngine/WorldDat.h
	Build/TileEngine/Simple_Render_Utils.h
	Build/TileEngine/World_Tileset_Enums.h
	Build/TileEngine/Tile_Animation.h
	Build/TileEngine/Smell.h
	Build/TileEngine/Map_Edgepoints.h
	Build/TileEngine/Explosion_Control.h
	Build/TileEngine/TileDat.h
	Build/TileEngine/Structure.h
	Build/TileEngine/TileDef.h
	Build/Cheats.h
	Build/SaveLoadGame.h
	Build/GameScreen.h
	Build/GameSettings.h
	Build/LoadSaveTacticalStatusType.h
	Build/GameInitOptionsScreen.h
	Build/Intro.h
	Build/Local.h
	Build/JAScreens.h
	Build/Credits.h
	Build/Loading_Screen.h
	Build/TacticalAI/AIInternals.h
	Build/TacticalAI/AI.h
	Build/TacticalAI/NPC.h
	Build/TacticalAI/AIList.h
	Build/TacticalAI/Medical.h
	Build/TacticalAI/FindLocations.h
	Build/GameLoop.h
	Build/AniViewScreen.h
	Build/Screens.h
	Build/Sys_Globals.h
	Build/Options_Screen.h
	Build/MessageBoxScreen.h
	Build/Tactical/Action_Items.h
	Build/Tactical/Soldier_Control.h
	Build/Tactical/LOS.h
	Build/Tactical/Animation_Data.h
	Build/Tactical/Overhead.h
	Build/Tactical/Soldier_Find.h
	Build/Tactical/LoadSaveBullet.h
	Build/Tactical/Real_Time_Input.h
	Build/Tactical/LoadSaveSoldierCreate.h
	Build/Tactical/End_Game.h
	Build/Tactical/Soldier_Ani.h
	Build/Tactical/World_Items.h
	Build/Tactical/Bullets.h
	Build/Tactical/Map_Information.h
	Build/Tactical/Merc_Entering.h
	Build/Tactical/Spread_Burst.h
	Build/Tactical/Interface_Control.h
	Build/Tactical/Air_Raid.h
	Build/Tactical/PathAIDebug.h
	Build/Tactical/Strategic_Exit_GUI.h
	Build/Tactical/Arms_Dealer.h
	Build/Tactical/Merc_Hiring.h
	Build/Tactical/Rotting_Corpses.h
	Build/Tactical/Soldier_Add.h
	Build/Tactical/Squads.h
	Build/Tactical/DisplayCover.h
	Build/Tactical/Interface_Cursors.h
	Build/Tactical/OppList.h
	Build/Tactical/Tactical_Save.h
	Build/Tactical/Enemy_Soldier_Save.h
	Build/Tactical/LoadSaveSoldierType.h
	Build/Tactical/ShopKeeper_Interface.h
	Build/Tactical/Soldier_Functions.h
	Build/Tactical/LoadSaveVehicleType.h
	Build/Tactical/Morale.h
	Build/Tactical/UI_Cursors.h
	Build/Tactical/Campaign.h
	Build/Tactical/Soldier_Profile_Type.h
	Build/Tactical/Soldier_Macros.h
	Build/Tactical/Boxing.h
	Build/Tactical/Items.h
	Build/Tactical/Soldier_Profile.h
	Build/Tactical/Handle_Items.h
	Build/Tactical/PathAI.h
	Build/Tactical/ArmsDealerInvInit.h
	Build/Tactical/Arms_Dealer_Init.h
	Build/Tactical/SkillCheck.h
	Build/Tactical/Turn_Based_Input.h
	Build/Tactical/LoadSaveBasicSoldierCreateStruct.h
	Build/Tactical/Keys.h
	Build/Tactical/Tactical_Turns.h
	Build/Tactical/Faces.h
	Build/Tactical/Dialogue_Control.h
	Build/Tactical/Inventory_Choosing.h
	Build/Tactical/TeamTurns.h
	Build/Tactical/ShopKeeper_Quotes.h
	Build/Tactical/Handle_Doors.h
	Build/Tactical/Structure_Wrap.h
	Build/Tactical/LoadSaveMercProfile.h
	Build/Tactical/QArray.h
	Build/Tactical/Vehicles.h
	Build/Tactical/Auto_Bandage.h
	Build/Tactical/Soldier_Init_List.h
	Build/Tactical/Gap.h
	Build/Tactical/FOV.h
	Build/Tactical/Soldier_Tile.h
	Build/Tactical/Points.h
	Build/Tactical/Interface_Utils.h
	Build/Tactical/Interface_Dialogue.h
	Build/Tactical/RT_Time_Defines.h
	Build/Tactical/Civ_Quotes.h
	Build/Tactical/Overhead_Types.h
	Build/Tactical/Interface_Panels.h
	Build/Tactical/Interface.h
	Build/Tactical/Handle_UI.h
	Build/Tactical/LoadSaveObjectType.h
	Build/Tactical/Interface_Items.h
	Build/Tactical/Drugs_And_Alcohol.h
	Build/Tactical/Weapons.h
	Build/Tactical/Animation_Control.h
	Build/Tactical/Animation_Cache.h
	Build/Tactical/Militia_Control.h
	Build/Tactical/LoadSaveRottingCorpse.h
	Build/Tactical/Item_Types.h
	Build/Tactical/Soldier_Create.h
	Build/Strategic/Strategic_AI.h
	Build/Strategic/Strategic_Movement.h
	Build/Strategic/Strategic_Mines.h
	Build/Strategic/Game_Event_Hook.h
	Build/Strategic/Hourly_Update.h
	Build/Strategic/PreBattle_Interface.h
	Build/Strategic/Strategic_Turns.h
	Build/Strategic/Merc_Contract.h
	Build/Strategic/Assignments.h
	Build/Strategic/Map_Screen_Helicopter.h
	Build/Strategic/Game_Init.h
	Build/Strategic/Strategic_Event_Handler.h
	Build/Strategic/Strategic_Pathing.h
	Build/Strategic/Scheduling.h
	Build/Strategic/LoadSaveUndergroundSectorInfo.h
	Build/Strategic/Map_Screen_Interface_Map_Inventory.h
	Build/Strategic/AI_Viewer.h
	Build/Strategic/Meanwhile.h
	Build/Strategic/Player_Command.h
	Build/Strategic/Creature_Spreading.h
	Build/Strategic/Facts.h
	Build/Strategic/StrategicMap.h
	Build/Strategic/Strategic_Merc_Handler.h
	Build/Strategic/Town_Militia.h
	Build/Strategic/Strategic_Status.h
	Build/Strategic/Map_Screen_Interface_Border.h
	Build/Strategic/Auto_Resolve.h
	Build/Strategic/Map_Screen_Interface_Map.h
	Build/Strategic/Quest_Debug_System.h
	Build/Strategic/Game_Events.h
	Build/Strategic/Game_Clock.h
	Build/Strategic/Map_Screen_Interface.h
	Build/Strategic/MapScreen.h
	Build/Strategic/Queen_Command.h
	Build/Strategic/LoadSaveSectorInfo.h
	Build/Strategic/Campaign_Types.h
	Build/Strategic/Campaign_Init.h
	Build/Strategic/Map_Screen_Interface_TownMine_Info.h
	Build/Strategic/Map_Screen_Interface_Bottom.h
	Build/Strategic/Strategic_Movement_Costs.h
	Build/Strategic/LoadSaveStrategicMapElement.h
	Build/Strategic/QuestText.h
	Build/Strategic/Strategic.h
	Build/Strategic/Strategic_Town_Loyalty.h
	Build/Strategic/Quests.h
	Build/Init.h
	Build/JA2_Splash.h
	Build/Laptop/BobbyRShipments.h
	Build/Laptop/Florist_Order_Form.h
	Build/Laptop/Funeral.h
	Build/Laptop/AIMHistory.h
	Build/Laptop/AIMArchives.h
	Build/Laptop/IMP_Attribute_Finish.h
	Build/Laptop/IMP_Personality_Quiz.h
	Build/Laptop/Insurance_Info.h
	Build/Laptop/BrokenLink.h
	Build/Laptop/AIMMembers.h
	Build/Laptop/IMP_Compile_Character.h
	Build/Laptop/IMP_HomePage.h
	Build/Laptop/Insurance_Contract.h
	Build/Laptop/AIM.h
	Build/Laptop/IMP_Personality_Entrance.h
	Build/Laptop/Finances.h
	Build/Laptop/IMP_AboutUs.h
	Build/Laptop/Florist_Gallery.h
	Build/Laptop/AIMPolicies.h
	Build/Laptop/EMail.h
	Build/Laptop/Mercs_Files.h
	Build/Laptop/LaptopSave.h
	Build/Laptop/IMP_Confirm.h
	Build/Laptop/Files.h
	Build/Laptop/IMP_Attribute_Entrance.h
	Build/Laptop/Mercs_No_Account.h
	Build/Laptop/IMPVideoObjects.h
	Build/Laptop/History.h
	Build/Laptop/IMP_MainPage.h
	Build/Laptop/IMP_Portraits.h
	Build/Laptop/BobbyRMailOrder.h
	Build/Laptop/IMP_Personality_Finish.h
	Build/Laptop/IMP_Attribute_Selection.h
	Build/Laptop/Laptop.h
	Build/Laptop/BobbyRArmour.h
	Build/Laptop/Speck_Quotes.h
	Build/Laptop/BobbyRAmmo.h
	Build/Laptop/AIMSort.h
	Build/Laptop/BobbyR.h
	Build/Laptop/IMP_Text_System.h
	Build/Laptop/BobbyRMisc.h
	Build/Laptop/IMP_Finish.h
	Build/Laptop/Personnel.h
	Build/Laptop/Insurance_Comments.h
	Build/Laptop/BobbyRGuns.h
	Build/Laptop/AIMLinks.h
	Build/Laptop/BobbyRUsed.h
	Build/Laptop/IMP_Voices.h
	Build/Laptop/Store_Inventory.h
	Build/Laptop/Mercs.h
	Build/Laptop/Florist_Cards.h
	Build/Laptop/Insurance_Text.h
	Build/Laptop/Florist.h
	Build/Laptop/CharProfile.h
	Build/Laptop/Mercs_Account.h
	Build/Laptop/IMP_Begin_Screen.h
	Build/Laptop/AIMFacialIndex.h
	Build/Laptop/Insurance.h
	Build/HelpScreenText.h
	Build/Res/Resource.h
	Build/Editor/EditorTerrain.h
	Build/Editor/EditorBuildings.h
	Build/Editor/Summary_Info.h
	Build/Editor/PopupMenu.h
	Build/Editor/Smooth.h
	Build/Editor/Cursor_Modes.h
	Build/Editor/Editor_Taskbar_Creation.h
	Build/Editor/MessageBox.h
	Build/Editor/Editor_Modes.h
	Build/Editor/EditorItems.h
	Build/Editor/Editor_Callback_Prototypes.h
	Build/Editor/Edit_Sys.h
	Build/Editor/EditorMercs.h
	Build/Editor/Item_Statistics.h
	Build/Editor/Editor_Taskbar_Utils.h
	Build/Editor/LoadScreen.h
	Build/Editor/Smoothing_Utils.h
	Build/Editor/Road_Smoothing.h
	Build/Editor/EditScreen.h
	Build/Editor/SelectWin.h
	Build/Editor/EditorMapInfo.h
	Build/Editor/EditorDefines.h
	Build/Editor/Sector_Summary.h
	Build/Editor/Button_Defines.h
	Build/Editor/Editor_Undo.h
	Build/Editor/NewSmooth.h
	Build/Editor/SmartMethod.h
	Build/Utils/_JA25EnglishText.h
	Build/Utils/Cursors.h
	Build/Utils/Encrypted_File.h
	Build/Utils/MercTextBox.h
	Build/Utils/Event_Pump.h
	Build/Utils/Cinematics.h
	Build/Utils/MapUtility.h
	Build/Utils/WordWrap.h
	Build/Utils/Debug_Control.h
	Build/Utils/Text_Utils.h
	Build/Utils/Multi_Language_Graphic_Utils.h
	Build/Utils/Event_Manager.h
	Build/Utils/Timer_Control.h
	Build/Utils/Font_Control.h
	Build/Utils/Animated_ProgressBar.h
	Build/Utils/STIConvert.h
	Build/Utils/Quantize.h
	Build/Utils/Utilities.h
	Build/Utils/Slider.h
	Build/Utils/Text.h
	Build/Utils/PopUpBox.h
	Build/Utils/Text_Input.h
	Build/Utils/Music_Control.h
	Build/Utils/Message.h
	Build/Utils/Sound_Control.h
	Build/SaveLoadScreen.h
	Build/JA2Types.h
	Build/Fade_Screen.h
	Build/HelpScreen.h
)

set( JA2EDITORSRCS
  Build/Editor/Cursor_Modes.cc
  Build/Editor/EditScreen.cc
  Build/Editor/Edit_Sys.cc
  Build/Editor/EditorBuildings.cc
  Build/Editor/EditorItems.cc
  Build/Editor/EditorMapInfo.cc
  Build/Editor/EditorMercs.cc
  Build/Editor/EditorTerrain.cc
  Build/Editor/Editor_Callbacks.cc
  Build/Editor/Editor_Modes.cc
  Build/Editor/Editor_Taskbar_Creation.cc
  Build/Editor/Editor_Taskbar_Utils.cc
  Build/Editor/Editor_Undo.cc
  Build/Editor/Item_Statistics.cc
  Build/Editor/LoadScreen.cc
  Build/Editor/MessageBox.cc
  Build/Editor/NewSmooth.cc
  Build/Editor/PopupMenu.cc
  Build/Editor/Road_Smoothing.cc
  Build/Editor/Sector_Summary.cc
  Build/Editor/SelectWin.cc
  Build/Editor/SmartMethod.cc
  Build/Editor/Smooth.cc
  Build/Editor/Smoothing_Utils.cc
)

IF(JA2EDITOR)
  set(JA2SRCS ${JA2SRCS} ${JA2HDRS} ${JA2EDITORSRCS})
ENDIF(JA2EDITOR)

add_executable( ja2 ${JA2SRCS} ${JA2LNGS} ${JA2HDRS})
target_link_libraries(ja2 ${SDL_LIBRARY})

IF(UNIX)
  set( INSTALLDIR /usr/local)
ELSE(UNIX)
  set( INSTALLDIR "C:\\Program Files\\ja2\\")
ENDIF(UNIX)

install(PROGRAMS ja2
  RUNTIME DESTINATION ${INSTALLDIR}/bin
  PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
)

